--- a/CampWebsite-master/CampWebsite/CampWebsite/Views/Shared/_Layout.cshtml
+++ b/CampWebsite-master/CampWebsite/CampWebsite/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand navbar-light p-1 bg-light ">
+        <nav class="navbar navbar-expand navbar-light p-1 " style="background:#0085ad">
             <div class="container">
                 <a class="navbar-brand" href="/Home/Index"><img src="~/images/chicken_logo.png" alt="" height="30" />露過人間</a>
                 <div class="d-flex">
