--- a/CampWebsite-master/CampWebsite/CampWebsite/Views/CampOwner/FutureOrdersForTent.cshtml
+++ b/CampWebsite-master/CampWebsite/CampWebsite/Views/CampOwner/FutureOrdersForTent.cshtml
@@ -19,7 +19,7 @@
 <div class="container-xl min-vh-100" style="">
     <div class="mb-5"></div>
     <div class="page-header mb-3">
-        <h2>未來訂單</h2>
+        <h2>@Model.First().tTent.fTentName</h2>
         <br />
     </div>
 
