--- a/CampWebsite-master/CampWebsite/CampWebsite/Views/CampOwner/NewCampsite.cshtml
+++ b/CampWebsite-master/CampWebsite/CampWebsite/Views/CampOwner/NewCampsite.cshtml
@@ -1,37 +1,37 @@
-﻿@model CampWebsite.ViewModels.NewCampsiteViewModel
+﻿        @model CampWebsite.ViewModels.NewCampsiteViewModel
 
-@{ ViewBag.Title = "註冊新營區";
-    Layout = "~/Views/Shared/_Layout.cshtml"; }
+        @{ ViewBag.Title = "註冊新營區";
+            Layout = "~/Views/Shared/_Layout.cshtml"; }
 
-<style>
-    .required::after {
-        content: " *";
-        color: red;
-    }
+        <style>
+            .required::after {
+                content: " *";
+                color: red;
+            }
 
-    .error-type::before {
-        content: "注意!! ";
-        color: red;
-    }
+            .error-type::before {
+                content: "注意!! ";
+                color: red;
+            }
 
-    .error-type {
-        color: red;
-    }
-</style>
-@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>*@
+            .error-type {
+                color: red;
+            }
+        </style>
+        @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>*@
 
-<div class="container">
-    <div class="mb-5"></div>
-    <div class="page-header mb-3">
-        <h3>新增你的營區</h3>
-        <br />
-        <span>資料完整客人才找的到你唷</span>
-    </div>
-    <br />
+        <div class="container">
+            <div class="mb-5"></div>
+            <div class="page-header mb-3">
+                <h3>新增你的營區</h3>
+                <br />
+                <span>資料完整客人才找的到你唷</span>
+            </div>
+            <br />
 
-    @using (Html.BeginForm("NewCampsite", "CampOwner", FormMethod.Post, new { enctype = "multipart/form-data" }))
-    {
-        @Html.AntiForgeryToken()
+            @using (Html.BeginForm("NewCampsite", "CampOwner", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                @Html.AntiForgeryToken()
 
         <div class="col-md-10 col-lg-8">
 
@@ -40,7 +40,7 @@
                 @Html.LabelFor(model => model.tCampsite.fCampsiteName, new { @class = "control-label card-title required" })
                 <br />
                 <span class="form-text">最多12個字唷</span>
-                @Html.EditorFor(model => model.tCampsite.fCampsiteName, new { htmlAttributes = new { @class = "form-control" } })
+                <input class="form-control text-box single-line" data-val="true" data-val-required="The 營區名稱 field is required." id="tCampsite_fCampsiteName" name="campName" type="text" value="">
                 @Html.ValidationMessageFor(model => model.tCampsite.fCampsiteName, "", new { @class = "text-danger" })
             </div>
 
@@ -49,7 +49,7 @@
             <div class="form-group mb-5">
                 @Html.LabelFor(model => model.tCampsite.fCampsiteIntroduction, new { @class = "control-label card-title required" })
                 <br />
-                <textarea class="form-control w-100" cols="20" data-val="true" data-val-required="必填欄位" id="tCampsite_fCampsiteIntroduction" name="tCampsite.fCampsiteIntroduction" rows="5"></textarea>
+                <textarea class="form-control w-100" cols="20" data-val="true" data-val-required="必填欄位" id="tCampsite_fCampsiteIntroduction" name="campIntro" rows="5"></textarea>
                 @Html.ValidationMessageFor(model => model.tCampsite.fCampsiteIntroduction, "", new { @class = "text-danger" })
             </div>
 
@@ -59,12 +59,19 @@
                 <div class="row">
                     <div class="col">
                         @Html.LabelFor(model => model.tCampsite.fCampsiteArea, new { @class = "control-label card-title required" })
-                        @Html.DropDownListFor(model => model.tCampsite.fCampsiteArea, (IEnumerable<SelectListItem>)Model.SelectArea, "請選擇區域", new { @class = "form-select" })
+                        <select class="form-select" id="tCampsite_fCampsiteArea" name="SelectArea">
+                            <option value="">請選擇區域</option>
+                            <option value="北部">北部</option>
+                            <option value="中部">中部</option>
+                            <option value="南部">南部</option>
+                            <option value="東部">東部</option>
+                            <option value="離島">離島</option>
+                        </select>
                         @Html.ValidationMessageFor(model => model.tCampsite.fCampsiteArea, "", new { @class = "text-danger" })
                     </div>
                     <div class="col">
                         @Html.LabelFor(model => model.tCampsite.fCampsiteCity, new { @class = "control-label  card-title required" })
-                        <select htmlattributes="{ class = form-select }" id="tCampsite_fCampsiteCity" name="tCampsite.fCampsiteCity" class="form-select" onchange="appendAddress(event)">
+                        <select htmlattributes="{ class = form-select }" id="tCampsite_fCampsiteCity" name="SelectCity" class="form-select" onchange="appendAddress(event)">
                             <option value="">請選擇縣市</option>
                         </select>
                         @Html.ValidationMessageFor(model => model.tCampsite.fCampsiteCity, "", new { @class = "text-danger" })
@@ -75,16 +82,16 @@
             @*地址*@
             <div class="form-group mb-5">
                 @Html.LabelFor(model => model.tCampsite.fCampsiteAddress, new { @class = "control-label  card-title required" })
-                <input class="form-control text-box single-line" data-val="true" data-val-required="必填欄位" id="tCampsite_fCampsiteAddress" name="tCampsite.fCampsiteAddress" type="text" value="">
+                <input class="form-control text-box single-line" data-val="true" data-val-required="必填欄位" id="tCampsite_fCampsiteAddress" name="campAddress" type="text" value="">
                 @Html.ValidationMessageFor(model => model.tCampsite.fCampsiteAddress, "", new { @class = "text-danger" })
             </div>
 
             @*phone*@
-            <div class="form-group mb-5">
-                @Html.LabelFor(model => model.tCampsite.fCampsitePhone, new { @class = "control-label card-title required" })
-                @Html.EditorFor(model => model.tCampsite.fCampsitePhone, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.tCampsite.fCampsitePhone, "", new { @class = "text-danger" })
-            </div>
+        <div class="form-group mb-5">
+            @Html.LabelFor(model => model.tCampsite.fCampsitePhone, new { @class = "control-label card-title required" })
+            <input class="form-control text-box single-line" id="tCampsite_fCampsitePhone" name="campPhone" type="tel" value="">
+            @Html.ValidationMessageFor(model => model.tCampsite.fCampsitePhone, "", new { @class = "text-danger" })
+        </div>
 
 
             @*altitude*@
@@ -95,46 +102,47 @@
                 <div class="d-flex justify-content-center">
                     <div>0</div>
                     <div class="w-100 px-3">
-                        <input type="range" id="tCampsite_fCampsiteAltitude" name="tCampsite.fCampsiteAltitude" min="0" max="2500" step="100" class="form-range" value="0">
+                        <input type="range" id="tCampsite_fCampsiteAltitude" name="campAltitude" min="0" max="2500" step="100" class="form-range" value="0">
                     </div>
                     <div>2500</div>
                 </div>
                 <div class="form-check form-check-inline">
-                    @Html.CheckBoxFor(model => model.withoutAltitude, new { @class = "form-check-input" })
+                    <input class="form-check-input" data-val="true" data-val-required="The withoutAltitude field is required." id="withoutAltitude" name="withoutAltitude" type="checkbox" value="true">
                     <label class="form-check-label" for="withAltitude">拒絕提供高度</label>
                 </div>
             </div>
 
-            @*tags
-                <div class="form-group mb-5">
-                    @Html.LabelFor(model => model.PickTags, new { @class = "control-label card-title" })
-                    <br />
-                    @{  var index = 0;}
-                    @foreach (var item in Model.PickTags)
-                    {
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input dayOffCheck" type="checkbox" value="@item.fTagID" name="PickTags[@index].fTagID">
-                            <label class="form-check-label" for="item.fTagID">@item.fTagName</label>
-                        </div>
 
-                        index++;
-                    }
+            @* 標籤 *@
+            <div class="form-group mb-5">
+                <p>一個標籤</p>
+                <div class="form-check form-check-inline">
+                    @Html.CheckBoxFor(m => m.firstTag.Checked, new { @class = "form-check-input" })
+                </div>
+                <br />
+                <label class="control-label card-title">營區標籤</label>
+                <br />
+                @for (int i = 0; i < Model.SelectTags.Count(); i++)
+                {
+            <div class="form-check form-check-inline">
+                <input class="form-check-input dayOffCheck" type="checkbox" id="@Model.SelectTags[i].TagName" name="SelectTags" value="@Model.SelectTags[i].TagID">
+                <label class="form-check-label" for="@Model.SelectTags[i].TagName">@Model.SelectTags[i].TagName</label>
 
-
-                </div>*@
-
+            </div>
+                }
+            </div>
 
 
             @*公休日*@
             <div class="form-group mb-5">
+
                 @Html.LabelFor(model => model.tCampsite.fCampsiteClosedDay, new { @class = "control-label card-title" })
                 <br />
                 @for (int i = 0; i < Model.DayOffs.Count(); i++)
                 {
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input dayOffCheck" type="checkbox" id="@Model.DayOffs[i].Day" name="@Model.DayOffs[i]" value="@Model.DayOffs[i].Value">
-                        <label class="form-check-label" for="@Model.DayOffs[i].Day">@Model.DayOffs[i].Day</label>
-                    </div>
+                    <input class="form-check-input dayOffCheck" type="checkbox" id="@Model.DayOffs[i].Day" name="DayOffs" value="@Model.DayOffs[i].Value">
+                    <label class="form-check-label" for="@Model.DayOffs[i].Day">@Model.DayOffs[i].Day</label>
+
                 }
             </div>
 
@@ -145,12 +153,12 @@
                     <div class="col">
                         @Html.LabelFor(model => model.tCampsite.fCampsiteCheckInTime, new { @class = "control-label card-title" })
                         <span id="checkinDisplay"></span>
-                        <input class="form-control text-box single-line" id="visibleCheckIn" name="tCampsite.fCampsiteCheckInTime" type="time" value="12:00">
+                        <input class="form-control text-box single-line" id="visibleCheckIn" name="CheckInTime" type="time" value="12:00">
                     </div>
                     <div class="col">
                         @Html.LabelFor(model => model.tCampsite.fCampsiteCheckOutTime, new { @class = "control-label card-title" })
                         <span id="checkoutDisplay"></span>
-                        <input class="form-control text-box single-line" id="visibleCheckOut" name="tCampsite.fCampsiteCheckOutTime" type="time" value="12:00">
+                        <input class="form-control text-box single-line" id="visibleCheckOut" name="CheckOutTime" type="time" value="12:00">
                     </div>
                 </div>
             </div>
@@ -169,106 +177,106 @@
             </div>
         </div>
 
-    }
-</div>
-
-<script>
-    //coverPhoto
-    const coverInput = document.getElementById("coverPhotoInput");
-    const coverPreview = document.getElementById("coverPhotoPreview");
-    const coverMessage = document.getElementById("coverPhotoMessage");
-    const send = document.getElementById("btnSend");
-
-    function loadCover(e) {
-        if (coverInput.files.length == 0) {
-            return;
-        } else if (!coverInput.files[0].type.startsWith("image/")) {
-            send.disabled = true;
-            coverPreview.src = "";
-            coverMessage.classList.add("error-type");
-            return;
-        } else {
-            coverMessage.classList.remove("error-type");
-            send.disabled = false;
-            coverPreview.src = URL.createObjectURL(e.target.files[0]);
-            coverPreview.onLoad = function () {
-                URL.revokeObjectURL(coverPreview.src);
             }
-        }
-    }
-</script>
-<script>
-        //jQuery
-        $(  function () {
-            //area & city
-            $("#tCampsite_fCampsiteArea").change(function () {
-                ChangeCities()
-            });
-        });
+        </div>
 
-        $(function () {
-            $(".dayOffCheck").click(function () {
-                if (this.checked == true) {
-                    if (this.value == "0") {
-                        $(".dayOffCheck").prop('checked',false);
-                        $('.dayOffCheck')[7].checked = true
+        <script>
+            //coverPhoto
+            const coverInput = document.getElementById("coverPhotoInput");
+            const coverPreview = document.getElementById("coverPhotoPreview");
+            const coverMessage = document.getElementById("coverPhotoMessage");
+            const send = document.getElementById("btnSend");
 
-                    //    $(".無公休").checked = true;
-                    }
-
-                }
-
-            })
-        })
-
-        const  ChangeCities = function() {
-            let selectedArea = $("#tCampsite_fCampsiteArea option:selected").val();
-            if (    $.trim(selectedArea).length > 0     ) {
-                GetCities(selectedArea);
-            }
-        }
-        function GetCities(selectedArea) {
-            $.ajax({
-                url: '@Url.Action("GetCities", "CampOwner")',
-                data: { area: selectedArea },
-                type: "post",
-                cache: false,
-                async: false,
-                dataType: "json",
-                success: function (data) {
-                    $("#tCampsite_fCampsiteCity").empty();
-                    if (data.length > 0) {
-                        $("#tCampsite_fCampsiteCity").append($("<option></option>").val("").text("請選擇縣市"));
-                        $.each(data, function (i, item) {
-                            $("#tCampsite_fCampsiteCity").append($("<option></option>").val(item.Key).text(item.Value));
-                        });
+            function loadCover(e) {
+                if (coverInput.files.length == 0) {
+                    return;
+                } else if (!coverInput.files[0].type.startsWith("image/")) {
+                    send.disabled = true;
+                    coverPreview.src = "";
+                    coverMessage.classList.add("error-type");
+                    return;
+                } else {
+                    coverMessage.classList.remove("error-type");
+                    send.disabled = false;
+                    coverPreview.src = URL.createObjectURL(e.target.files[0]);
+                    coverPreview.onLoad = function () {
+                        URL.revokeObjectURL(coverPreview.src);
                     }
                 }
-            });
-        }
-        const appendAddress = function (e) {
-            e.preventDefault();
-            document.getElementById("tCampsite_fCampsiteAddress").value = $("#tCampsite_fCampsiteCity option:selected").val();
-            console.log("success");
-        }
-        //refactory
+            }
+        </script>
+        <script>
+                //jQuery
+                $(  function () {
+                    //area & city
+                    $("#tCampsite_fCampsiteArea").change(function () {
+                        ChangeCities()
+                    });
+                });
 
-    //altitude
-    const slider = document.getElementById("tCampsite_fCampsiteAltitude");
-    const display = document.getElementById("altitudeDisplay");
-    display.innerHTML = slider.value;
-    slider.oninput = function () {
-        display.innerHTML = this.value;
-        }
+                $(function () {
+                    $(".dayOffCheck").click(function () {
+                        if (this.checked == true) {
+                            if (this.value == "0") {
+                                $(".dayOffCheck").prop('checked',false);
+                                $('.dayOffCheck')[7].checked = true
 
-    const noAltitude = document.getElementById("withoutAltitude");
-    noAltitude.onchange = function () {
-        if (this.checked) {
-            slider.disabled = true;
-            display.innerHTML = "不提供";
-        } else {
-            slider.disabled = false;
-            slider.innerHTML = 0;
-        }
-     }
-</script>
+                            //    $(".無公休").checked = true;
+                            }
+
+                        }
+
+                    })
+                })
+
+                const  ChangeCities = function() {
+                    let selectedArea = $("#tCampsite_fCampsiteArea option:selected").val();
+                    if (    $.trim(selectedArea).length > 0     ) {
+                        GetCities(selectedArea);
+                    }
+                }
+                function GetCities(selectedArea) {
+                    $.ajax({
+                        url: '@Url.Action("GetCities", "CampOwner")',
+                        data: { area: selectedArea },
+                        type: "post",
+                        cache: false,
+                        async: false,
+                        dataType: "json",
+                        success: function (data) {
+                            $("#tCampsite_fCampsiteCity").empty();
+                            if (data.length > 0) {
+                                $("#tCampsite_fCampsiteCity").append($("<option></option>").val("").text("請選擇縣市"));
+                                $.each(data, function (i, item) {
+                                    $("#tCampsite_fCampsiteCity").append($("<option></option>").val(item.Key).text(item.Value));
+                                });
+                            }
+                        }
+                    });
+                }
+                const appendAddress = function (e) {
+                    e.preventDefault();
+                    document.getElementById("tCampsite_fCampsiteAddress").value = $("#tCampsite_fCampsiteCity option:selected").val();
+                    console.log("success");
+                }
+                //refactory
+
+            //altitude
+            const slider = document.getElementById("tCampsite_fCampsiteAltitude");
+            const display = document.getElementById("altitudeDisplay");
+            display.innerHTML = slider.value;
+            slider.oninput = function () {
+                display.innerHTML = this.value;
+                }
+
+            const noAltitude = document.getElementById("withoutAltitude");
+            noAltitude.onchange = function () {
+                if (this.checked) {
+                    slider.disabled = true;
+                    display.innerHTML = "不提供";
+                } else {
+                    slider.disabled = false;
+                    slider.innerHTML = 0;
+                }
+             }
+        </script>
